--- a/gc/pom.xml
+++ b/gc/pom.xml
@@ -7,23 +7,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>memory</artifactId>
+    <artifactId>gc</artifactId>
     <packaging>jar</packaging>
 
-    <name>memory</name>
+    <name>gc</name>
     <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-<!--
-        <dependency>
-            <groupId>org.openjdk.jol</groupId>
-            <artifactId>jol-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
--->
-    </dependencies>
+
 </project>
