--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>classloader</module>
         <module>nio</module>
         <module>memory</module>
+        <module>gc</module>
     </modules>
 
 
