--- a/unsafe/pom.xml
+++ b/unsafe/pom.xml
@@ -1,39 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-    <groupId>com.cliffyuan</groupId>
-    <artifactId>javabase</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
+    <parent>
+        <artifactId>javabase</artifactId>
+        <groupId>com.cliffyuan</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
 
-    <modules>
-        <module>threadpool2</module>
-        <module>lock</module>
-        <module>classloader</module>
-        <module>nio</module>
-        <module>memory</module>
-        <module>gc</module>
-        <module>juc</module>
-        <module>jmx</module>
-        <module>unsafe</module>
-    </modules>
+    <artifactId>unsafe</artifactId>
+    <packaging>jar</packaging>
 
-
-    <name>javabase</name>
+    <name>unsafe</name>
     <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>3.8.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
